--- a/NiceHashMiner/langs/ru.lang
+++ b/NiceHashMiner/langs/ru.lang
@@ -73,7 +73,7 @@
     "Form_Main_msgbox_InvalidBTCAddressMsg": "Неверный Биткоин-адрес!\n\nПожалуйста, введите правильный Биткоин-адрес или выберите «Да», чтобы создать новый.",
     "Form_Main_msgbox_InvalidWorkerNameMsg": "Неверное имя компьютера!\n\nПожалуйста, введите правильное имя компьютера (Aa-Zz, 0-9, длиной до 15 символов).",
     "Form_Main_msgbox_NullNiceHashDataMsg": "Не удаётся получить данные прибыльности Приложения. Если вы подключены к интернету, попробуйте снова позже.",
-    "Form_Main_msgbox_HaveNotBenchmarkedMsg": "Вы ещё не сделали бенчмарк для устройства {0}. Без бенчмарка Приложение не сможет переключаться на наиболее прибыльный алгоритм. Для продолжения майнинга, нажмите «Да». Если вы хотите сперва сделать бенчмарк, выберите «Нет» и нажмите на кнопку «Бенчмарк».",
+    "Form_Main_msgbox_HaveNotBenchmarkedMsg": "Вы ещё не сделали тест доходности для устройства {0}. Без теста Приложение не сможет переключаться на наиболее прибыльный алгоритм. Для продолжения майнинга, нажмите «Да». Если вы хотите сперва сделать тест, выберите «Нет» и нажмите на кнопку «Тест доходности».",
     "Form_Main_msgbox_buttonBenchmarkWarningMsg": "Редактирование дополнительных настроек для продвинутых пользователей.\r\n\r\nЕсли работа {0} аварийно завершается, в связи с плохой конфигурацией, вы можете сбросить ее удалением файла 'config.json'.\r\n\r\nПродолжить редактирование настроек?",
     "Form_Main_msgbox_buttonBenchmarkRestartWarningTitle": "Перезагрузка {0}",
     "Form_Main_msgbox_buttonBenchmarkRestartWarningMsg": "Работа {0} завершится. Этот новое диалоговое окно ещё тестируется и {0} нужен перезапуск для результата.",
@@ -82,8 +82,8 @@
     "Form_Main_MINING_NO_INTERNET_CONNECTION": "МАЙНИНГ СЕЙЧАС НЕ РАБОТАЕТ. НЕТ ПОДКЛЮЧЕНИЯ К ИНТЕРНЕТУ.",
 
 
-    "Form_Benchmark_title": "Бенчмарк",
-    "Form_Benchmark_buttonStartBenchmark": "&Старт бенчмарка",
+    "Form_Benchmark_title": "Тест доходности",
+    "Form_Benchmark_buttonStartBenchmark": "&Старт теста доходности",
     "Form_Benchmark_buttonStopBenchmark": "Ст&оп",
     "Form_Benchmark_buttonReset": "Сбр&осить",
     "Form_Benchmark_buttonClose": "За&крыть",
@@ -94,7 +94,7 @@
     "Form_Benchmark_radioButton_PreciseBenchmark": "&Точный (долгий)",
     "Form_Benchmark_listView_WaitSeconds": "Подождите, пожалуйста, около {0} секунд…",
     "Form_Benchmark_listView_WaitMinutes": " Подождите, пожалуйста, около {0} минут…",
-    "Form_Benchmark_listView_WaitForEth": "Бенчмарк (2-4 минуты)…",
+    "Form_Benchmark_listView_WaitForEth": "Тест доходности (2-4 минуты)…",
 
 
     "Form_Loading_label_LoadingText": "Загрузка, подождите, пожалуйста…",
@@ -112,19 +112,19 @@
     "MinerFileNotFoundDialog_chkBoxDisableDetection": "&Отключить определение этого устройства",
 
 
-    "SubmitResultDialog_title": "Отправить результаты бенчмарка",
-    "SubmitResultDialog_labelInstruction": "Выберите, пожалуйста, устройство для бенчмарка и, как только он закончится, автоматически \r\nоткроется новая веб-страница для отображения калькулятора прибыльности на сайте.",
+    "SubmitResultDialog_title": "Отправить результаты тестов",
+    "SubmitResultDialog_labelInstruction": "Выберите, пожалуйста, устройство для теста доходности и, как только он закончится, автоматически \r\nоткроется новая веб-страница для отображения калькулятора прибыльности на сайте.",
     "SubmitResultDialog_StartBtn": "&Старт",
     "SubmitResultDialog_StopBtn": "С&топ",
     "SubmitResultDialog_CloseBtn": "&Закрыть",
     "SubmitResultDialog_LabelProgressPercentageCompleted": "Завершено!",
     "SubmitResultDialog_LabelProgressPercentageStopped": "Остановлено!",
-    "SubmitResultDialog_LabelProgressPercentageInProgress": "{0}% : Бенчмарк {1}… Подождите, пожалуйста…",
+    "SubmitResultDialog_LabelProgressPercentageInProgress": "{0}% : Тест {1}… Подождите, пожалуйста…",
 
     "SubmitResultDialog_NoDeviceCheckedTitle": "Устройства не выбраны",
     "SubmitResultDialog_NoDeviceCheckedMsg": "Выберите, пожалуйста, как минимум одно устройство для отправки результатов.",
-    "SubmitResultDialog_UsePreviousBenchmarkedValueTitle": "Использовать прежние значения бенчмарка?",
-    "SubmitResultDialog_UsePreviousBenchmarkedValueMsg": "Вы можете использовать прежние значения бенчмарка. Выберите «Да», для использования прежних значений бенчмарка или выберите «Нет» для перезапуска бенчмарка.",
+    "SubmitResultDialog_UsePreviousBenchmarkedValueTitle": "Использовать прежние значения теста доходности?",
+    "SubmitResultDialog_UsePreviousBenchmarkedValueMsg": "Вы можете использовать прежние значения тестов. Выберите «Да», для использования прежних значений тестов или выберите «Нет» для перезапуска тестов.",
 
 
     "Form_Settings_General_DebugConsole": "Окно отладки",
@@ -176,7 +176,7 @@
     "Form_Settings_General_DisableAMDTempControl": "Откл. контроль температуры AMD",
 
     "Form_Settings_Algo_Skip": "Пропустить",
-    "Form_Settings_Algo_BenchmarkSpeed": "Скорость бенчмарка (H/s)",
+    "Form_Settings_Algo_BenchmarkSpeed": "Скорость теста доходности (H/s)",
     "Form_Settings_Algo_SecondaryBenchmarkSpeed": "Средняя контрольная скорость",
 
     "Form_Settings_LessThreadWarningTitle": "Неверное значение уменьшителя кол-ва потоков!",
