remove all words "бенч"

--- a/NiceHashMiner/langs/ru.lang
+++ b/NiceHashMiner/langs/ru.lang
@@ -185,8 +185,8 @@
     "Form_Settings_MinimumProfitWarningMsg": "Ошибка! Введите, пожалуйста, минимальный доход, который является числом больше/равным 0.",
     "Form_Settings_APIBindPortWarningTitle": "Неверный номер порта API!",
     "Form_Settings_APIBindPortWarningMsg": "Ошибка! Введите, пожалуйста, корректный номер порта API.",
-    "Form_Settings_BenchmarkSpeedWarningTitle": "Неверная скорость бенчмарка!",
-    "Form_Settings_BenchmarkSpeedWarningMsg": "Ошибка! Введите, пожалуйста, скорость бенчмарка, которая является числом больше/равным 0.",
+    "Form_Settings_BenchmarkSpeedWarningTitle": "Неверная скорость теста доходности!",
+    "Form_Settings_BenchmarkSpeedWarningMsg": "Ошибка! Введите, пожалуйста, скорость теста, которая является числом больше/равным 0.",
     "Form_Settings_DaggerHashimotoGenerateDeviceWarningTitle": "Неверный номер устройства!",
     "Form_Settings_DaggerHashimotoGenerateDeviceWarningMsg": "Ошибка! Введите, пожалуйста, номер устройства, который должен быть числом и быть больше/равен 0.",
     "Form_Settings_labelCPUDevice": "Пропустить для CPU.",
@@ -226,7 +226,7 @@
     "Form_Settings_ToolTip_MinerAPIGraceSeconds": "Период времени без принудительного перезапуска майнера, если API недоступен.",
     "Form_Settings_ToolTip_MinerAPIGraceSecondsAMD": "Дополнительное время без принудительного перезапуска майнера AMD GPU, если API недоступен.",
 
-    "Form_Settings_ToolTip_BenchmarkTimeLimits": "Количество времени в секундах для {0} бенчмарка {1}",
+    "Form_Settings_ToolTip_BenchmarkTimeLimits": "Количество времени в секундах для {0} теста доходности {1}",
 
     "Form_Settings_ToolTip_checkBox_DisableDetection": "Отметьте, если хотите пропускать определение {0} GPU.",
     "Form_Settings_ToolTip_checkBox_AutoScaleBTCValues": "Отметьте, если хотите видеть значения BTC в подходящем масштабе.",
@@ -244,7 +244,7 @@
     "Form_Settings_ToolTip_checkBox_RunScriptOnCUDA_GPU_Lost": "Если отмечено, Приложение запустит OnGPUsLost.bat \nпри потере хотя бы одного устройства CUDA GPU,\nпо умолчанию скрипт должен перезапускать всю систему.",
     "Form_Settings_ToolTip_checkBox_NVIDIAP0State": "Если отмечено, Приложение изменит все поддерживаемые NVidia GPU в статус P0. Это немного\nувеличит производительность на некоторых алгоритмах. Требуются права администратора.",
     "Form_Settings_ToolTip_ethminerAPIPort": "Порт API, который будет использоваться ethminer для {0} GPU.",
-    "Form_Settings_ToolTip_ethminerDefaultBlockHeight": "Устанавливает высоту блока по умолчанию, используемую для бенчмарка, если вызов API не сработает.",
+    "Form_Settings_ToolTip_ethminerDefaultBlockHeight": "Устанавливает высоту блока по умолчанию, используемую для теста доходности, если вызов API не сработает.",
 
     "Form_Settings_ToolTip_APIBindPort": "Порт API, который будет использоваться этой группой.",
     "Form_Settings_ToolTip_UsePassword": "Использовать этот пароль при запуске майнера. Если не указан, используется пароль по умолчанию 'x'.",
@@ -255,9 +255,9 @@
     "Form_Settings_ToolTip_DisableAMDTempControl": "Отметьте, если вы хотите отключить встроенный контроль температуры\nдля AMD GPU (за исключением алгоритма daggerhashimoto).",
     "Form_Settings_ToolTip_MinimizeMiningWindows": "Если отмечено, окна майнеров будут запускаться в свёрнутом состоянии.",
 
-    "Form_Settings_ToolTip_AlgoSkip": "Отметьте, если вы хотели бы пропустить/отключить определённый алгоритм. \nБенчмарк, а также фактический майнинг будут отключены для этого конкретного алгоритма. \nЭто означает, что автоматическое переключение будет пропускать этот алгоритм во время майнинга.",
+    "Form_Settings_ToolTip_AlgoSkip": "Отметьте, если вы хотели бы пропустить/отключить определённый алгоритм. \nТест доходности, а также фактический майнинг будут отключены для этого конкретного алгоритма. \nЭто означает, что автоматическое переключение будет пропускать этот алгоритм во время майнинга.",
     "Form_Settings_ToolTip_AlgoUsePassword": "Использовать этот пароль при запуске майнера и этого алгоритма. Если не указано, будет использоваться пароль группы.",
-    "Form_Settings_ToolTip_AlgoBenchmarkSpeed": "Ручная настройка скорости бенчмарка для каждого алгоритма.",
+    "Form_Settings_ToolTip_AlgoBenchmarkSpeed": "Ручная настройка скорости теста доходности для каждого алгоритма.",
     "Form_Settings_ToolTip_AlgoSecondaryBenchmarkSpeed": "Скорость для вторичного алгоритма при использовании алгоритма двойного алгоритма.",
     "Form_Settings_ToolTip_AlgoDisabledDevices": "Отмеченные устройства будут пропущены Приложением (только для этого алгоритма).",
     "Form_Settings_ToolTip_AlgoExtraLaunchParameters": "Дополнительные параметры при запуске майнера и этого алгоритма.",
@@ -276,7 +276,7 @@
     "AlgorithmsListView_Ratio": "BTC/GH/дн соотношение",
     "AlgorithmsListView_Rate": "BTC/дн",
     "AlgorithmSettingsControl_IntensityWarning": "Значения интенсивности для выбранного алгоритма должны быть между {0} и {1}",
-    "EnabledUnbenchmarkedAlgorithmsWarning": "Для выбранных устройств есть алгоритмы, не прошедшие бенчмарк. Нажмите «Да» для бенчмарка и начала майнинга, «Нет» — для пропуска бенчмарка и продолжения майнинга, «Отмена» — для прерывания",
+    "EnabledUnbenchmarkedAlgorithmsWarning": "Для выбранных устройств есть алгоритмы, не прошедшие тестдоходности. Нажмите «Да» для теста доходности и начала майнинга, «Нет» — для пропуска теста доходности и продолжения майнинга, «Отмена» — для прерывания",
     "AlgorithmSettingsControl_Label_Intensity": "Интенсивность",
     "AlgorithmSettingsControl_ToolTip_Intensity": "Устанавливает интенсивность для выбранного алгоритма (значения между 8.0 — 25.0 или 31.0, в зависимости от алгоритма). Значение 0 задаёт интенсивность по умолчанию. ФУНКЦИЯ ДЛЯ ПРОДВИНУТЫХ ПОЛЬЗОВАТЕЛЕЙ.",
     "AlgorithmsListView_GroupBox": "Выбранный алгоритм: {0}",
@@ -284,18 +284,18 @@
     "AlgorithmsListView_ContextMenu_DisableAll": "Отключить все алгоритмы",
     "AlgorithmsListView_ContextMenu_EnableAll": "Включить все алгоритмы",
     "AlgorithmsListView_ContextMenu_ClearItem": "Сбросить скорость алгоритма",
-    "BenchmarkOptions_Benchmark_Type": "Тип бенчмарка:",
+    "BenchmarkOptions_Benchmark_Type": "Тип теста доходности:",
     "Form_Main_MiningDevices": "Устройства {0}:",
     "Form_Main_bins_folder_files_missing": "Отсутствуют файлы с последней инициализации майнеров. Убедитесь, что ваш антивирус не блокирует приложение. Приложение может не работать правильно без недостающих файлов. Нажмите «Да» для переустановки Приложение, чтобы попробовать исправить ошибку.",
     "Form_Main_MINING_NOT_PROFITABLE": "МАЙНИНГ НЕ ПРИБЫЛЬНЫЙ НА ДАННЫЙ МОМЕНТ.",
     "Form_Main_Group_Device_Rates": "Ставки Группы/Устройства:",
-    "FormBenchmark_Benchmark_Step": "Шаг бенчмарка ( {0} / {1} )",
+    "FormBenchmark_Benchmark_Step": "Шаг теста доходности ( {0} / {1} )",
     "FormBenchmark_Benchmark_Finish_Succes_MsgBox_Msg": "Все тесты были удачными",
-    "FormBenchmark_Benchmark_Finish_Fail_MsgBox_Msg": "Не все тесты прошли удачно. Попробуйте перезапустить бенчмарк для алгоритмов, непрошедших его, либо Отмените для отключения этих алгоритмов.",
-    "FormBenchmark_Benchmark_Finish_MsgBox_Title": "Бенчмарк был завершён",
-    "FormBenchmark_Benchmark_GroupBoxStatus": "Прогресс бенчмарка:",
-    "FormBenchmark_Benchmark_All_Selected_Unbenchmarked": "Бенчмарк выбранных непротестированных алгоритмов",
-    "FormBenchmark_Benchmark_All_Selected_ReUnbenchmarked": "Бенчмарк всех выбранных алгоритмов",
+    "FormBenchmark_Benchmark_Finish_Fail_MsgBox_Msg": "Не все тесты прошли удачно. Попробуйте перезапустить тест доходности для алгоритмов, непрошедших его, либо Отмените для отключения этих алгоритмов.",
+    "FormBenchmark_Benchmark_Finish_MsgBox_Title": "Тест доходности был завершён",
+    "FormBenchmark_Benchmark_GroupBoxStatus": "Прогресс теста доходности:",
+    "FormBenchmark_Benchmark_All_Selected_Unbenchmarked": "Тест доходности выбранных непротестированных алгоритмов",
+    "FormBenchmark_Benchmark_All_Selected_ReUnbenchmarked": "Тест доходности всех выбранных алгоритмов",
     "FormSettings_Tab_General": "Общие",
     "FormSettings_Tab_Advanced": "Расширенные",
     "FormSettings_Tab_Devices_Algorithms": "Устройства/Алгоритмы",
@@ -304,7 +304,7 @@
     "FormSettings_Tab_General_Group_Logging": "Логирование:",
     "FormSettings_Tab_General_Group_Misc": "Разное:",
     "FormSettings_Tab_Advanced_Group_Miners": "Майнеры:",
-    "FormSettings_Tab_Advanced_Group_BenchmarkTimeLimits": "Лимит времени бенчмарка:",
+    "FormSettings_Tab_Advanced_Group_BenchmarkTimeLimits": "Лимит времени теста доходности:",
     "FormSettings_Tab_Devices_Algorithms_Check_SingleProfitability": "Проверить прибыльность одного",
     "FormSettings_Tab_Devices_Algorithms_Check_ALLProfitability": "Проверить прибыльность всех",
     "MinersDownloadManager_Title_Downloading": "Загрузка майнеров",
@@ -312,18 +312,18 @@
     "MinersDownloadManager_Title_Settup_Unzipping": "Распаковка {0} %",
     "DeviceListView_ContextMenu_DisableDevice": "Отключить устройство",
     "DeviceListView_ContextMenu_EnableDevice": "Включить устройство",
-    "DeviceListView_ContextMenu_CopySettings": "Скопировать настройки из (Бенчмарк, параметры алгоритмов, …)",
+    "DeviceListView_ContextMenu_CopySettings": "Скопировать настройки из (Тест доходности, параметры алгоритмов, …)",
     "DeviceListView_ContextMenu_CopySettings_Confirm_Dialog_Msg": "Вы уверены, что хотите скопировать настройки из {0} в {1}?",
     "DeviceListView_ContextMenu_CopySettings_Confirm_Dialog_Title": "Подтверждение копирования настроек",
     "FormSettings_AlgorithmsSettings": "Настройки алгоритма для {0}:",
     "FormSettings_ButtonProfitSingle": "Сперва выберите устройство",
-    "Form_Settings_General_BenchmarkTimeLimits_Title": "Лимит времени бенчмарка",
+    "Form_Settings_General_BenchmarkTimeLimits_Title": "Лимит времени теста доходности",
     "Form_Settings_Title": "Настройки",
-    "FormBenchmark_No_Devices_Selected_Msg": "Устройства для бенчмарка не были выбраны",
+    "FormBenchmark_No_Devices_Selected_Msg": "Устройства для теста доходности не были выбраны",
     "FormBenchmark_No_Devices_Selected_Title": "Устройства не выбраны",
-    "FormBenchmark_Nothing_to_Benchmark_Msg": "Текущие настройки бенчмарка уже тестировались. Нечего выполнять.",
+    "FormBenchmark_Nothing_to_Benchmark_Msg": "Текущие настройки теста доходности уже тестировались. Нечего выполнять.",
     "FormBenchmark_Nothing_to_Benchmark_Title": "Нечего тестировать",
-    "Algorithm_Waiting_Benchmark": "Ожидание бенчмарка",
+    "Algorithm_Waiting_Benchmark": "Ожидание теста доходности",
     "BenchmarkSpeedStringNone": "нет",
     "BenchmarkRatioRateN_A": "Н/Д",
     "Benchmark_Timedout": "Время истекло",
@@ -364,12 +364,12 @@
     "Form_Settings_General_3rdparty_ToolTip": "Использовать закрытое стороннее программное обеспечение \nдля повышения прибыльности майнинга.\nИспользование на вашей собственной ответственности.",
     "Form_Settings_General_AllowMultipleInstances_Text": "Разрешить несколько экземпляров",
     "Form_Settings_General_AllowMultipleInstances_ToolTip": "Если не отмечено, Приложение разрешит работу только одного экземпляра\n(он закроет новый запущенный экземпляр, если один экземпляр уже работает).",
-    "Form_Main_No_Device_Enabled_Algorithms_For_Mining": "Для выбранных устройств нет включённых алгоритмов. Перейдите в Настройки или Бенчмарк и включите хотя бы 1 алгоритм.",
-    "Form_Benchmark_checkbox_StartMiningAfterBenchmark": "Запустить майнинг после бенчмарка",
-    "Form_Main_StartMiningReturnedFalse": "Приложение не может начать майнинг. Убедитесь, что хотя бы одно устройство включено с хотя бы одним включённым и прошедшим бенчмарк алгоритмом",
+    "Form_Main_No_Device_Enabled_Algorithms_For_Mining": "Для выбранных устройств нет включённых алгоритмов. Перейдите в Настройки или Тест доходности и включите хотя бы 1 алгоритм.",
+    "Form_Benchmark_checkbox_StartMiningAfterBenchmark": "Запустить майнинг после теста доходности",
+    "Form_Main_StartMiningReturnedFalse": "Приложение не может начать майнинг. Убедитесь, что хотя бы одно устройство включено с хотя бы одним включённым и прошедшим тест доходности алгоритмом",
     "Program_WMI_Error_Text": "Приложение не может запустить необходимые компоненты. Похоже, что в вашей системе отключена служба «Инструментарий управления Windows». Для корректной работы Приложения служба «Инструментарий управления Windows» должна быть включена. Эта служба нужна для определения использования RAM и доступной информации видеоконтроллера. Включите службу «Инструментарий управления Windows» вручную и запустите Приложение.",
     "Program_WMI_Error_Title": "Ошибка Инструментария управления Windows",
-    "Form_Main_Accepted_Speed_Zero": "Предупреждение! Алгоритм {0} сообщает 0 принятых шар. Отключите, пожалуйста, этот алгоритм в Бенчмарке/Настройках и сообщите о данной проблеме!",
+    "Form_Main_Accepted_Speed_Zero": "Предупреждение! Алгоритм {0} сообщает 0 принятых шар. Отключите, пожалуйста, этот алгоритм в тесте доходности/Настройках и сообщите о данной проблеме!",
 
     "Form_Settings_General_SwitchProfitabilityThreshold": "Порог переключ. прибыльн.:",
     "Form_Settings_ToolTip_SwitchProfitabilityThreshold": "Майнер не будет переключаться, если разница между прибыльностью алгоритмов\nниже Порога переключения прибыльности. Значение в процентах [0 — 1]",
